[package]
name = "sp-validator-sets"
version = "0.1.0"
authors = ["Akil Demir <akildemir72@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/serai-dex/substrate/"
description = "Primitives for validator sets pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-std = { version = "8", default-features = false, path = "../std" }

[features]
default = [ "std" ]
std = [
	"sp-api/std",
	"sp-std/std",
]
